--- a/sysContable-war/web/menu.xhtml
+++ b/sysContable-war/web/menu.xhtml
@@ -61,7 +61,7 @@
 
                 </h:form>
             </div>
-            <div class="ui-g-9" id="contentOcultar" style=" padding-left: 0; padding-right: 0">
+            <div class="ui-g-9" id="contentOcultar" style=" padding-left: 0; padding-right: 0;padding-top: 33px;">
                 <p:panel id="includePanel">
                     <ui:include src="#{contextMenuView.currentPage}" />
                 </p:panel>
