--- a/sysContable-war/web/seguridad/MttPerfiles.xhtml
+++ b/sysContable-war/web/seguridad/MttPerfiles.xhtml
@@ -33,6 +33,7 @@
                                     action="#{mttPerfiles.buscarPerfiles()}"
                                     />
                     </p:menubar>
+                      <p:focus context="detalleMttPerfil"/>
                     <p:panel id="detalleMttPerfil" style="width: 100% !important; max-width: 100%;">
                         <p:panelGrid columns="4" layout="grid" 
                                      styleClass="panel-stilo">
