--- a/sysContable-war/web/mantenimiento/RefresEntity.xhtml
+++ b/sysContable-war/web/mantenimiento/RefresEntity.xhtml
@@ -13,9 +13,10 @@
             <h1 class="estilo-titulo">Mantenimiento de entidades</h1>
             <p:tabView dynamic="true">
                 <p:tab title="Mantenimiento" >
-                    <p:menubar>
+                    <p:menubar styleClass="custom-menubar">
                         <p:menuitem value="Refrescar" 
                                     icon="pi pi-spin pi-spinner" 
+                                     styleClass="custom-menuitem"
                                     action="#{refresEntity.refresEntity()}" />
                     </p:menubar>
                 </p:tab>
