--- a/sysContable-war/web/seguridad/MttPerfiles.xhtml
+++ b/sysContable-war/web/seguridad/MttPerfiles.xhtml
@@ -90,7 +90,7 @@
                     <div >
                         <p:panelGrid columns="1"
                                      layout="grid"
-                                     styleClass="my-panelgrid ui-panelgrid-blank ui-fluid"
+                                     styleClass="panel-stilo"
                                      style="border:0px none; background-color:transparent;">
 
 
