--- a/sysContable-war/web/index.xhtml
+++ b/sysContable-war/web/index.xhtml
@@ -7,7 +7,7 @@
         <title>SysContable</title>
         <link rel="icon" type="image/jpg" href="./resources/imagenes/img.jpg"></link>
         <h:outputStylesheet name="primeicons/primeicons.css" library="primefaces" />
-        <h:outputStylesheet library="css" name="1ab.css" />
+        <h:outputStylesheet library="css" name="1ab1.css" />
         <h:outputScript library="js" name="validaciones.js" />
         <h:outputScript library="js" name="index.js" />
         
