--- a/sysContable-war/web/seguridad/MttUsuarios.xhtml
+++ b/sysContable-war/web/seguridad/MttUsuarios.xhtml
@@ -10,135 +10,126 @@
     <h:body>
         <h1 class="estilo-titulo">Mantenimiento de usuarios</h1>
         <h:form id="formUsuarios">
-
-            <p:tabView  prependId="false" >
+            <p:tabView dynamic="true"   prependId="false" 
+                       activeIndex="#{mttUsuarios.indexTab}" >
                 <p:tab title="Busqueda">
-                    <p:menubar>
+                    <p:menubar styleClass="custom-menubar">
                         <p:menuitem value="Buscar" 
-                                    icon="pi pi-plus" 
-                                    action="#{mttenimientoModulos.iniciarModulo()}"/>
+                                    icon="pi pi-plus"
+                                    update="formUsuarios:singleDT"
+                                    styleClass="custom-menuitem"
+                                    action="#{mttUsuarios.buscarUsuario()}"/>
+                            <p:menuitem value="Limpiar" 
+                                    icon="pi pi-trash"
+                                    update="formUsuarios"
+                                    styleClass="custom-menuitem"
+                                    action="#{mttUsuarios.limpiarBusqueda()}"/>
                     </p:menubar>
                     <p:panelGrid  id="pnModulos" columns="4" layout="grid" 
                                   styleClass="panel-stilo">
-                        <p:outputLabel for="txtNomMod" value="Nombre" />
-                        <p:inputText id="txtNomMod" value="#{mttenimientoModulos.nomModulo}"
+                        <p:outputLabel value="Nombre" for="@next"/>
+                        <p:autoComplete id="atcNombre" value="#{mttUsuarios.nombre}"
+                                        completeMethod="#{mttUsuarios.obtenerNombre}" 
+                                        minQueryLength="3" scrollHeight="250"
+                                        onkeypress="return validarSoloLetras(event)" 
+                                        inputStyleClass="inputTest" 
+                                        />
+                        <p:outputLabel for="txtCodUser" value="Codigo de usuario" />
+                        <p:inputText id="txtCodUser" value="#{mttUsuarios.codUser}"
                                      onkeypress="return validarSoloLetras(event)"/>
 
-                        <p:outputLabel for="txtCodmod" value="Codigo" />
-                        <p:inputText id="txtCodmod" value="#{mttenimientoModulos.codModulo}"
-                                     onkeypress="soloNumeros(event)"/>
+                        <p:outputLabel for="lblcorrelativo" value="Sucursal" />
+                        <p:selectOneMenu id="lblcorrelativo" value="#{mttUsuarios.corSucursal}">
+                            <f:selectItem itemLabel="Seleccione" itemValue="" />
+                            <f:selectItems value="#{mttUsuarios.itmSucursales}" />
+                        </p:selectOneMenu>
+
                     </p:panelGrid>
-                    <p:dataTable id="singleDT" var="m" value="#{mttenimientoModulos.lstModulos}" 
-                                 rowKey="#{m.codmod}"
+                    <p:dataTable id="singleDT" var="m" value="#{mttUsuarios.lstUsuarios}" 
+                                 rowKey="#{m.coduser}"
                                  paginator="true" 
                                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  rows="10"
                                  styleClass="style-table"
                                  paginatorPosition="bottom"
                                  selectionMode="single" 
-                                 selection="#{mttenimientoModulos.selectecModulo}">
-                        <p:ajax event="rowSelect"  listener="#{mttenimientoModulos.cargarPantallas}" 
-                                />
-                        <f:facet name="header" >
-                            MODULOS 
-                        </f:facet>
-
+                                 selection="#{mttUsuarios.selectUsuario}">
+                        <p:ajax event="rowSelect"  listener="#{mttUsuarios.cargarUsuario()}" 
+                                update="formUsuarios"/>
                         <p:column headerText="Codigo">
-                            <h:outputText value="#{m.codmod}" />
+                            <h:outputText value="#{m.coduser}" />
                         </p:column>
                         <p:column headerText="Nombre">
-                            <h:outputText value="#{m.nommodulo}" />
+                            <h:outputText value="#{m.persona.nomcom}" />
+                        </p:column>
+                        <p:column headerText="Punto de venta">
+                            <h:outputText value="#{m.persona.puntoventa.nombre}" />
+                        </p:column>
+                        <p:column headerText="Punto de venta">
+                            <h:outputText value="#{m.estado==1? 'activo':'inactivo'}" />
                         </p:column>
 
                     </p:dataTable>
                 </p:tab>
                 <p:tab title="Detalle">
-                    <div class="card">
-                        <h5>Responsive Grid</h5>
-                        <style>
-                            /* reset on the showcase style*/
-                            body .ui-panelgrid .ui-panelgrid-cell {
-                                background-color: transparent;
-                            }
-
-                            /* example use of styles for your form */
-                            .my-heading-row {
-                                background-color: var(--surface-c);
-                                font-weight: bold;
-                            }
-                        </style>
-
-                        <!--
-                        Note: Rows and columns can have style, styleClass, and id.
-                        Note: A column with a defined styleClass will ignore the styleClass specified in the columnClasses list.
-                        Note: Note the use of ui-fluid to ensure that components are sized correctly and the use of ui-panelgrid-blank to remove borders.
-                        -->
-                        <p:panelGrid columns="4"
-                                     columnClasses="ui-grid-col-2,ui-grid-col-4,ui-grid-col-2,ui-grid-col-4"
-                                     layout="grid"
-                                     styleClass="ui-panelgrid-blank ui-fluid"
-                                     style="border:0px none; background-color:transparent;">
-
-                            <p:row styleClass="my-heading-row">
-                                Biographic
-                            </p:row>
-
-                            <p:outputLabel for="@next" value="First Name"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="@next" value="Last Name"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="@next" value="Phone"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="@next" value="Email"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="@next" value="Address"/>
-                            <p:inputTextarea rows="3"/>
-
-                            <p:row id="my-row-id" styleClass="my-heading-row" style="font-weight: bold">
-                                Vehicle
-                            </p:row>
-
-                            <p:outputLabel for="@next" value="Manufacturer"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="@next" value="Series"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="@next" value="Color"/>
-                            <p:inputText/>
-
-                            <p:outputLabel for="idReg" value="Registration Number"/>
-                            <p:column style="background-color: lightcoral">
-                                <p:inputText id="idReg"/>
-                            </p:column>
-
-                            <p:row>
-                                <p:column styleClass="ui-grid-col-12">
-                                    <p>It should be noted that the use of @next is not possible for the
-                                        <u>Registration Number</u> outputLabel and the <u>for</u> attribute
-                                        should utilize an ID as shown in the example. The other outputLabel and inputText fields do not require this
-                                        as they are the natural next element whereas
-                                        <u>Registration Number</u> is encapsulated in a column.</p>
-                                </p:column>
-                            </p:row>
-
-                            <p:row>
-                                <p:column styleClass="ui-grid-col-12">
-                                    <p:commandButton value="Accept" styleClass="mr-2" style="width: auto"/>
-                                    <p:commandButton value="Reject" styleClass="mr-2" style="width: auto"/>
-                                    <p:commandButton value="Refer" style="width: auto" />
-                                </p:column>
-                            </p:row>
-                        </p:panelGrid>
-                    </div>
+                      <p:menubar styleClass="custom-menubar">
+                        <p:menuitem value="Buscar" 
+                                    icon="pi pi-plus"
+                                    update="formUsuarios:singleDT"
+                                    styleClass="custom-menuitem"
+                                    action="#{mttUsuarios.buscarUsuario()}"/>
+                            <p:menuitem value="Limpiar" 
+                                    icon="pi pi-trash"
+                                    update="formUsuarios"
+                                    styleClass="custom-menuitem"
+                                    action="#{mttUsuarios.limpiarBusqueda()}"/>
+                    </p:menubar>
+                    <p:panelGrid  id="pnUserdt" columns="4" layout="grid" 
+                                  styleClass="panel-stilo">
+                        <p:outputLabel for="txtCodUserdt" value="Nombre" />
+                        <p:inputText id="txtCodUserdt" value="#{mttUsuarios.nombreUser}"
+                                     onkeypress="return validarSoloLetras(event)"/>
+                        <p:outputLabel for="lblsucursaldt" value="Sucursal" />
+                        <p:selectOneMenu id="lblsucursaldt" value="#{mttUsuarios.corrVenta}">
+                            <f:selectItem itemLabel="Seleccione" itemValue="0" />
+                            <f:selectItems value="#{mttUsuarios.itmSucursales}" />
+                        </p:selectOneMenu>
+                        <p:outputLabel for="txtcodusdt" value="Codigo de usuario" />
+                        <p:inputText id="txtcodusdt" value="#{mttUsuarios.codiUser}"
+                                     onkeypress="return validarSoloLetras(event)"/>
+                        <p:outputLabel for="txtdurclavedt" value="Duracion de clave" />
+                        <p:inputText id="txtdurclavedt" value="#{mttUsuarios.duraClave}"
+                                     onkeypress="return validarSoloLetras(event)"/>
+                        <p:outputLabel for="txtestadodt" value="Estado" />
+                        <p:selectOneMenu id="txtestadodt" value="#{mttUsuarios.estado}">
+                            <f:selectItem itemLabel="Seleccione" itemValue="0" />
+                            <f:selectItem itemLabel="Activo" itemValue="1" />
+                            <f:selectItem itemLabel="inactivo" itemValue="2" />
+                        </p:selectOneMenu>
+                        <p:outputLabel for="txtperfildt" value="Perfil" />
+                        <p:selectOneMenu id="txtperfildt" value="#{mttUsuarios.codPerfil}">
+                            <f:selectItem itemLabel="Seleccione" itemValue="0" />
+                            <f:selectItems value="#{mttUsuarios.itmPerfiles}" />
+                        </p:selectOneMenu>
+                    </p:panelGrid>
                 </p:tab>
             </p:tabView>
         </h:form>
-
+        <!--dialogo para los msj-->
+        <p:dialog id="busc" 
+                  header="Informacion" 
+                  widgetVar="dlgMensajes"
+                  width="70%" height="40%"
+                  modal="true"
+                  >
+            <p:messages 
+                id="msj"
+                showDetail="true" 
+                closable="false"
+                >
+                <p:autoUpdate />
+            </p:messages>
+        </p:dialog>
     </h:body>
 </html>
 
